--- a/config
+++ b/config
@@ -3,8 +3,8 @@
   'pass' => 'c4ca4238a0b923820dcc509a6f75849b',
   'fname' => 'ben',
   'lname' => 'david',
-  'server_refresh_sec' => '1',
+  'server_refresh_sec' => NULL,
   'mobile_number' => '',
-  'board_name_monitored' => 'MY_FIRST_BOARD',
-  'filter_pins_by_board' => 'MY_FIRST_BOARD',
+  'board_name_monitored' => 'b2',
+  'filter_pins_by_board' => 'b2',
 );
